# fastapi_tutorial

./: .env-example  .gitignore  README.md  pyproject.toml
fastapi_tutorial/: app.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 0fc118ef2531_add_new_column_to_users.py  31693fc3f262_create_users_table.py  7a1d46b795a1_fix_added_new_column_to_users.py  f198d34d375b_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
