[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["smrenato <renatosmx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"

[tool.poetry.scripts]
# app_run = "fastapi_tutorial:app"
# app_run = "fastapi dev fastapi_tutorial/app.py"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fastapi_tutorial/app.py'

pre_test = 'task lint'
test = 'pytest -s -x  --cov=fastapi_tutorial -vv'
post_test = 'coverage html'

lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.3"
black = "^24.4.2"
pytest = "^8.2.2"
ruff = "^0.4.10"
taskipy = "^1.13.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
