[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "alembic>=1.13.2",
  "fastapi[standard]>=0.114.1",
  "pwdlib[argon2]>=0.2.1",
  "pydantic-settings>=2.5.2",
  "pyjwt>=2.9.0",
  "python-multipart>=0.0.9",
  "ruff>=0.6.4",
  "sqlalchemy>=2.0.34",
]

[tool.uv]
dev-dependencies = [
  "pylint>=3.2.7",
  "pytest-cov>=5.0.0",
  "pytest>=8.3.3",
  "ruff>=0.6.4",
  "taskipy>=1.13.0",
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.taskipy.tasks]
run = 'fastapi dev fastapi_tutorial/app.py'

# pre_test = 'task lint'
test = 'pytest -s -x  --cov=fastapi_tutorial -vv'
post_test = 'coverage html'

lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'
